# message-proxy

./: .dockerignore  .gitignore  DOCKER_DEPLOY.md  DOCKER_OPTIMIZATION.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
src/message_proxy/: __init__.py  api.py  config.py  logging_config.py  main.py  model.py  wechat.py
tests/: test_config.py  test_wechat.py
