[project]
name = "message-proxy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "xxlgenius", email = "hszhangown@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.124.2",
]

[project.scripts]
message-proxy = "message_proxy:main"

[build-system]
requires = ["uv_build>=0.9.17,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
