[project]
name = "message-proxy"
version = "0.1.0"
description = "Add your description here"
authors = [{ name = "xxlgenius", email = "hszhangown@gmail.com" }]
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.128.0",
    "httpx>=0.28.1",
    "pydantic-settings>=2.12.0",
    "tenacity>=9.1.2",
    "uvicorn[standard]>=0.40.0",
]

[project.scripts]
message-proxy = "message_proxy.main:main"

[build-system]
requires = ["uv_build>=0.9.17,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = ["pytest>=9.0.2", "pytest-mock>=3.15.1"]
